--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <nav>
-            <a href="" class="./">
-                <img src="./img/header-logo 1.png" alt="">
+        <img src="./img/header-logo 1.png" alt="My photo">
+
 
             </a>
             <ul class="menu">
@@ -38,8 +38,7 @@
         </div>
     </header>
     <div class="content2">
-        <img class="content2-img" src="./img/block 1.png" alt="class">
-    </div>
+    <img src="./img/block 1.png" alt="My photo">
 
     <main class="container">
         <section class="content">
@@ -66,8 +65,8 @@
         </section>
     </main>
     <footer class="foot">
-        <div class="left-foot">
-            <img src="./img/footer-logo 1.png" alt="">
+        <img src="./img/footer-logo 1.png" alt="My photo">
+
         </div>
 
         <div class="right-foot">
